--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /.pnp
 .pnp.js
 /coverage
-/build
 .DS_Store
 .env.local
 .env.development.local
@@ -12,3 +11,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+venv
